refactored JS model config from prototype methods to backbone statics